<resources>
    <string name="app_name">Reservation App</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="size_of_group">Size of Group</string>
    <string name="date_of_booking">Date of Booking</string>
    <string name="time_of_booking">Time of Booking</string>
    <string name="table_area_preference">Table Area Preference</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="no_smoking_area">No Smoking Area</string>
    <string name="tick_reservation_info">Tick if Reservation Info is Correct</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
</resources>