<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/finalbackground5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:gravity="center|left"
        android:paddingLeft="15dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:soundEffectsEnabled="false"
                android:text="Welcome to the Online Reservation App!"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/viewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingLeft="5dp"
                android:text="@string/name"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Please enter your name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/viewMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingLeft="5dp"
                android:text="@string/mobile_number"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="e.g., 9123 4567"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/viewGroupSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingLeft="5dp"
                android:text="@string/size_of_group"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editGroupSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="e.g., 1, 10, 100"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/viewDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="15dp"
                    android:text="@string/date_of_booking"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

                <TextView
                    android:id="@+id/viewTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="15dp"
                    android:text="@string/time_of_booking"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/table_area_preference"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radioGroupSmoking"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButtonSmoking"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="15dp"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:text="@string/smoking_area" />

                        <RadioButton
                            android:id="@+id/radioButtonNoSmoking"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="15dp"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:text="@string/no_smoking_area" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxConfirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/tick_reservation_info" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/submit" />

                    <Button
                        android:id="@+id/buttonReset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/reset" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/submitName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="30dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/submitPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/submitSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/submitDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/submitTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/submitArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingBottom="35dp"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>